
v1.0.17
* SCOREF-MGMT_Configuration.pdf file has been added under Documentation/

v1.0.16
* Openair source file template has been prepended to every source file
* README.HEADER_TEMPLATE file has been added
* 'CM-GN Interface Definition_v4.pdf' and 
  'ITS Station Management Core - Low Level Description.pdf' files has been
  added under Documentation/ and Documentation/README file has been updated
* Doxygen documentation has been added for mgmt_its_key_manager.hpp file

v1.0.15
* README.BUILD.ECLIPSE.PATHS.xml file updated with Boost path
* Communication profiles defined in L221-4.1.3 are entered into conf. file
* Communication profiles are now parsed from configuration file
* UdpServer and Util classes are moved into util/ directory
* A primitive Log class has been added

v1.0.14
* Wireless State response/request is now separate (not tested)

v1.0.13
* Compilation error fixed in main.cpp
* Doxygen comments for UdpServer class has been added

v1.0.12
* Forgotten UDP server class committed and version numbers are corrected

v1.0.11
* Missing Doxygen tags added

v1.0.10
* ManagementClient added and client state is now kept per-client basis

v1.0.9
* Communication profile request and response packets added
* README.BUILD.ECLISE and README.BUILD.ECLIPSE.CODING_STYLE.xml
  files added for Eclipse development instructions
* GeonetMessageHandler now keeps client state and sends bulk configuration 
  if corresponding request has been lost

v1.0.8
* ITS parameters are now classified and processed accordingly
* ItsKeyManager class added to split ITS configuration code
* Linkage parameters are re-ordered in Makefile

v1.0.7
* UdpServer.{cpp|hpp} updated and main() code clarified

v1.0.6
* Parameter parsing error fixed
* FAC_ parameters added into configuration file
* Wireless State response parser added (not tested)
* README.BUILD.ECLIPSE file added

v1.0.5
* Makefile (and Makefile.sources) file added to remove development ties with